--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,7 +12,7 @@
 	<meta name="msapplication-TileColor" content="#000000">
 
 	<title>WebLarek</title>
-	<meta name="description" content="">
+	<meta name="description" content="Проектная работа: WEB-ларёк">
 </head>
 <body class="page">
 	<div class="page__wrapper">
