--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -41,8 +41,8 @@
 
 	<template id="success">
 		<div class="order-success">
-			<h2 class="order-success__title">Заказ оформлен</h2>
-			<p class="order-success__description">Списано 0 синапсов</p>
+			<h2 class="order-success__title"></h2>
+			<p class="order-success__description"></p>
 			<button class="button order-success__close">За новыми покупками!</button>
 		</div>
 	</template>
